<resources>


    <!--String related to First Screen-->

    <string name="search">Tìm kiếm</string>
    <string name="title">30 Club Music</string>
    <string name="signin">Đăng nhập</string>
    <string name="browse">Browse</string>
    <string name="list">List</string>
    <string name="engvi">Eng/Vi</string>

    <!--end of First Screen-->

    <!--String related to main screen -->
    <string name="app_name">30 Club Music</string>
    <string name="name">Tên</string>
    <string name="pass">Password</string>
    <string name="login">Đăng nhập</string>
    <string name="forget">Quên mật khẩu?</string>
    <string name="create">Tạo tài khoản</string>
    <string name="error">Tên đã có người sử dụng</string>
    <string name="ok">OK</string>
    <string name="wrongInfo">Thông tin đăng nhập không chính xác, vui lòng kiếm tra lại </string>
    <string name="title_activity_sign_up">Đăng kí</string>
    <string name="rememberMe">Ghi nhớ đăng nhập</string>
    <string name="connectionLost">Vui lòng kiểm tra kết nối mạng</string>
    <string name="myplaylist">Play list của tôi</string>
    <string name="createPlaylist">Tạo playlist </string>
    <!--End of main screen -->

    <!-- Strings related to login -->
    <string name="prompt_email">Email đã dùng để đăng kí tài khoản</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Đăng kí</string>
    <string name="action_sign_in_short">Đăng kí tài khoản</string>
    <string name="username">Tên đăng nhập</string>
    <string name="date">Ngày tháng năm sinh :</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="others">Khác</string>
    <string name="gender">Giới tính :</string>
    <string name="cancel">Huỷ</string>
    <string name="blank">Vui lòng không bỏ trống ô này </string>
    <string name="registerOK">Tạo tài khoản thành công.</string>
    <string name="error_invalid_email">Địa chỉ email không hợp lệ!</string>
    <string name="error_invalid_password">Password cần lớn hơn 4 kí tự</string>
    <string name="invalidDate">Ngày sinh không hợp lệ </string>
    <string name="send">Gửi</string>
    <string name="emailNotFound">Email không chính xác </string>
    <string name="infoNotFound"> Không tìm thấy người dùng này.</string>
    <string name="passwordGenerated">Mật khẩu mới đã được gửi đến email của bạn.</string>
    <!-- End of login -->

    <!--  String related to userInformation    -->
    <string name="title_activity_user_information">Thông tin cá nhân</string>
    <string name="I_userName">Tên Người Dùng :</string>
    <string name="I_email">Email : </string>
    <string name="role">Loại tài khoản : </string>
    <string name="updateInfo">Chỉnh sửa thông tin</string>
    <string name="action_settings">what</string>
    <string name="logout">Đăng xuất</string>
    <!--End of userInformation-->

    <!--String related to change info-->
    <string name="change">Xác nhận</string>
    <string name="retypepass">Nhập lại password</string>
    <string name="passwordmatch">Pasword không khớp!</string>
    <string name="infochanged">Thay đổi thông tin thành công</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!--end of string related to change info-->

    <!--String used to set boom-menu-->
    <string name="userInfo">Thông tin cá nhân</string>
    <string name="showAlbum">Album</string>
    <string name="onlinemusic">Nhạc Online</string>
    <string name="feedback">Góp ý</string>
    <string name="admin">Quản lí người dùng</string>
    <string name="title_activity_forget_password">Quên mật khẩu</string>
    <string name="off_music">Nhạc Offline</string>
    <string name="featruetheme">Thể loại nổi bật</string>
    <string name="more">Xem thêm</string>

    <string name="maybeyoulike">Có thể bạn thích</string>
    <string name="nodata">Không có dữ liệu</string>
    <string name="moreplaylist">Xem thêm playlist</string>
    <string name="featuredplaylist">Playlist nổi bật</string>
    <string name="hotalbum">Album hot</string>
    <string name="alltheme">Tất cả chủ đề</string>
    <string name="allstyle">Tất cả thể loại</string>
    <string name="themeandstyle">Chủ đề và thể loại</string>
    <string name="homepage">Trang chủ</string>
    <string name="searchfrag">Tìm kiếm</string>
    <string name="addsongplaylist">Thêm bài hát vào playlist</string>
    <string name="addplaylist">Thêm playlist</string>
    <string name="youhaveadd">Bạn đã thêm bài hát vào playlist</string>
    <string name="existsong">Bài hát đã tồn tại trong playlist</string>
    <string name="createafolder">Tạo một thư mục...</string>
    <string name="downloadsong">Tải về bài hát</string>
    <string name="youhavecreateplaylist">Bạn đã tạo playlist</string>
    <string name="existplaylist">Playlist đã tồn tại</string>

    <!--end of boom-menu's String-->

</resources>

