<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserInformation"
    tools:showIn="@layout/activity_user_information">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:stretchColumns="*"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="50dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/i_username"
                        android:layout_width="wrap_content"


                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/I_userName" />

                    <TextView
                        android:id="@+id/i_username_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/i_email"
                        android:layout_width="68dp"
                        android:layout_height="wrap_content"

                        android:scrollHorizontally="false"
                        android:text="@string/I_email" />

                    <EditText
                        android:id="@+id/i_email_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:bufferType="spannable"
                        android:ems="10"
                        android:enabled="false"
                        android:inputType="textWebEmailAddress|textEmailSubject"
                        android:singleLine="true" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/i_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gender" />

                    <EditText
                        android:id="@+id/i_gender_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:enabled="false"
                        android:inputType="textPersonName|text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/i_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/date"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/i_birthday_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:enabled="false"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/i_role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/role" />

                    <TextView
                        android:id="@+id/i_role_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:textStyle="bold" />

                </TableRow>
            </TableLayout>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>